folders/Nopol_QUIXBUGS_GCD/results/QuixBugs/GCD/Nopol/400/repair.log
cd /users2/cpca56132020/moliveira/folders/Nopol_QUIXBUGS_GCD/Nopol_QuixBugs_GCD_;
export JAVA_TOOL_OPTIONS="-Dfile.encoding=UTF8 -Duser.language=en-US -Duser.country=US -Duser.language=en";
TZ="America/New_York"; export TZ;
export PATH="/users2/cpca56132020/moliveira/deps/jdk-8/bin:$PATH";
export JAVA_HOME="/users2/cpca56132020/moliveira/deps/jdk-8/bin";
time java -Xmx4g -Xms1g -cp /users2/cpca56132020/moliveira/RepairThemAll/script/../repair_tools/nopol.jar:/users2/cpca56132020/moliveira/deps/jdk-8/bin/../lib/tools.jar fr.inria.lille.repair.Main \
	--mode repair \
	--type pre_then_cond \
	--oracle angelic \
	--synthesis smt \
	--flocal gzoltar \
	--json \
	--solver z3 \
	--solver-path /users2/cpca56132020/moliveira/RepairThemAll/script/../libs/z3/build/z3 \
	--complianceLevel 8 \
	--source src/main/java \
	--classpath "target/classes:target/test-classes:/users2/cpca56132020/moliveira/.m2/repository/junit/junit/4.11/junit-4.11.jar:/users2/cpca56132020/moliveira/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar:/users2/cpca56132020/moliveira/RepairThemAll/script/../repair_tools/nopol.jar";
	echo "\n\nNode: `hostname`\n";
	echo "\n\nDate: `date`\n";
Picked up JAVA_TOOL_OPTIONS: -Dfile.encoding=UTF8 -Duser.language=en-US -Duser.country=US -Duser.language=en
07:53:11.309 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Source files: [src/main/java]
07:53:11.312 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Classpath: [file:/users2/cpca56132020/moliveira/folders/Nopol_QUIXBUGS_GCD/Nopol_QuixBugs_GCD_/target/classes/, file:/users2/cpca56132020/moliveira/folders/Nopol_QUIXBUGS_GCD/Nopol_QuixBugs_GCD_/target/test-classes/, file:/users2/cpca56132020/moliveira/.m2/repository/junit/junit/4.11/junit-4.11.jar, file:/users2/cpca56132020/moliveira/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar, file:/users2/cpca56132020/moliveira/RepairThemAll/script/../repair_tools/nopol.jar]
07:53:11.312 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Statement type: PRE_THEN_COND
07:53:11.313 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Args: [java_testcases.junit.GCD_Test]
07:53:11.315 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Config: Config{synthesisDepth=3, collectStaticMethods=true, collectStaticFields=false, collectLiterals=false, onlyOneSynthesisResult=true, sortExpressions=true, maxLineInvocationPerTest=250, timeoutMethodInvocation=2000, dataCollectionTimeoutInSecondForSynthesis=900, addWeight=0.19478, subWeight=0.04554, mulWeight=0.0102, divWeight=0.00613, andWeight=0.10597, orWeight=0.05708, eqWeight=0.22798, nEqWeight=0.0, lessEqWeight=0.0255, lessWeight=0.0947, methodCallWeight=0.1, fieldAccessWeight=0.08099, constantWeight=0.14232, variableWeight=0.05195, mode=REPAIR, type=PRE_THEN_COND, synthesis=SMT, oracle=ANGELIC, solver=Z3, solverPath='/users2/cpca56132020/moliveira/RepairThemAll/script/../libs/z3/build/z3', projectSources=[src/main/java], projectClasspath='[Ljava.net.URL;@16c0663d', projectTests=[java_testcases.junit.GCD_Test], complianceLevel=8, outputFolder=., json=true}
07:53:11.315 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Available processors (cores): 1
07:53:11.318 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Free memory: 968 MB
07:53:11.318 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Maximum memory: 3 GB
07:53:11.318 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Total memory available to JVM: 989 MB
07:53:11.318 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Java version: 1.8.0_282
07:53:11.321 [main] INFO  fr.inria.lille.repair.nopol.NoPol - JAVA_HOME: /users2/cpca56132020/moliveira/deps/jdk-8/bin
07:53:11.321 [main] INFO  fr.inria.lille.repair.nopol.NoPol - PATH: /users2/cpca56132020/moliveira/deps/jdk-8/bin:/users2/cpca56132020/moliveira/deps/Maven/apache-maven/bin:/users2/cpca56132020/moliveira/deps/Gradle/gradle-6.8.3/bin:/usr/condabin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/users2/cpca56132020/moliveira/.local/bin:/users2/cpca56132020/moliveira/bin
07:53:28.875 [pool-2-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - statement #1
07:53:28.877 [pool-2-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - Analysing SourceLocation java_programs.GCD:19 which is executed by 5 tests
70377
07:53:29.017 [pool-2-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - looking with class fr.inria.lille.repair.nopol.spoon.smt.ConditionalAdder
07:53:29.655 [pool-3-thread-1] ERROR x.java.compiler.DynamicClassCompiler - [Compilation errors]
GCD.java:24: error: missing return statement
    }
    ^
07:53:29.657 [pool-3-thread-1] ERROR f.i.l.r.n.s.ConstraintModelBuilder - Unable to compile the change: 
public class GCD {
    public static int gcd(int a, int b) {
        if (b == 0) {
            return a;
        } else {
            boolean spoonDefaultValue = false;
            try {
                spoonDefaultValue = true;
            } catch (java.lang.Exception __NopolProcessorException) {
            }
            boolean runtimeAngelicValue = fr.inria.lille.repair.nopol.synth.AngelicExecution.angelicValue(spoonDefaultValue);
            if (fr.inria.lille.commons.trace.RuntimeValues.instance(0).isEnabled()) {
                fr.inria.lille.commons.trace.RuntimeValues.instance(0).collectionStarts();
                try{fr.inria.lille.commons.trace.RuntimeValues.instance(0).collectInput("a",a);} catch (Exception ex1) {ex1.printStackTrace();};
                try{fr.inria.lille.commons.trace.RuntimeValues.instance(0).collectInput("b",b);} catch (Exception ex1) {ex1.printStackTrace();};
                fr.inria.lille.commons.trace.RuntimeValues.instance(0).collectOutput(runtimeAngelicValue);
                fr.inria.lille.commons.trace.RuntimeValues.instance(0).collectionEnds();
            }
            if (runtimeAngelicValue)
                return java_programs.GCD.gcd(a % b, b);

        }
    }
}
07:53:29.670 [pool-2-thread-1] ERROR fr.inria.lille.repair.nopol.NoPol - Error ExecutionException java.util.concurrent.ExecutionException: xxl.java.compiler.DynamicCompilationException: Aborting: dynamic compilation failed
07:53:29.670 [pool-2-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - statement #2
07:53:29.671 [pool-2-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - Analysing SourceLocation java_programs.GCD:16 which is executed by 5 tests
70377
07:53:29.734 [pool-2-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - looking with class fr.inria.lille.repair.nopol.spoon.smt.ConditionalReplacer
07:53:57.888 [pool-5-thread-1] DEBUG tests.output - Failing tests with false: 
[test_1(java_testcases.junit.GCD_Test): null, test_2(java_testcases.junit.GCD_Test): test timed out after 3000 milliseconds, test_0(java_testcases.junit.GCD_Test): test timed out after 3000 milliseconds, test_3(java_testcases.junit.GCD_Test): test timed out after 3000 milliseconds, test_4(java_testcases.junit.GCD_Test): test timed out after 3000 milliseconds]
07:53:57.889 [pool-5-thread-1] DEBUG tests.output - Failing tests with true: 
[test_1(java_testcases.junit.GCD_Test): test timed out after 3000 milliseconds, test_2(java_testcases.junit.GCD_Test): test timed out after 3000 milliseconds, test_0(java_testcases.junit.GCD_Test): test timed out after 3000 milliseconds, test_3(java_testcases.junit.GCD_Test): test timed out after 3000 milliseconds, test_4(java_testcases.junit.GCD_Test): test timed out after 3000 milliseconds]
07:53:57.889 [pool-5-thread-1] INFO  f.i.l.r.n.synth.SMTNopolSynthesizer - Not enough specifications: 0. A trivial patch is "true" or "false", please write new tests specifying SourceLocation java_programs.GCD:16.
07:53:57.890 [pool-2-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - ----INFORMATION----
07:53:57.903 [pool-2-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - Nb classes : 3
07:53:57.903 [pool-2-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - Nb methods : 9
07:53:57.903 [pool-2-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - Nb Statements Analyzed : 2
07:53:57.903 [pool-2-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - Nb Statements with Angelic Value Found : 0
07:53:57.903 [pool-2-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - Nb inputs in SMT : 0
07:53:57.905 [pool-2-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - Nb SMT level: 0
07:53:57.905 [pool-2-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - Nb variables in SMT : 0
07:53:57.905 [pool-2-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - NoPol Execution time : 46582ms
07:53:57.905 [pool-2-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - 
NO_ANGELIC_VALUE

real	0m47.355s
user	0m32.071s
sys	0m9.240s
\n\nNode: hpc060.ncg.ingrid.pt\n
\n\nDate: Tue Mar 30 07:53:58 EDT 2021\n
